Add information on culture collection and gDNA isolation.

--- a/quantify_16S_ratios.tex
+++ b/quantify_16S_ratios.tex
@@ -1,13 +1,49 @@
-\documentclass[a4paper]{article}
+\documentclass{article}
 \usepackage{cite}
+\usepackage[colorlinks=true]{hyperref}
 
 \begin{document}
 
 \title{Protocol: Quantifying species abundance using 16S Sanger Sequencing and CASEU}
 \author{Jack Reddan}
-\date{}
 
 \maketitle{}
+
+\tableofcontents{}
+
+\section{Culture collection}\label{CC}
+\subsection{Overview}
+This section describes collecting cultures for which you wish to quantify species abundances.
+In addition to any experimental mixtures,
+pure cultures of community members are needed for the analysis.
+
+\subsection{Materials}
+\begin{enumerate}
+  \item Liquid culture of a mixed microbial composition
+  \item Pure, liquid cultures for each component of the mixed community
+  \item 2-mL microcentrifuge tubes
+\end{enumerate}
+
+\subsection{Method}
+\begin{enumerate}
+  \item In a 2-mL microcentrifuge tube, Collect 1 ODmL of liquid culture for all mixtures and pure cultures.
+  \item Spin-down and remove supernatant.
+  \item Either store pellets at $-20$ $^\circ$C, or continue to \hyperref[GI]{gDNA Isolation}.
+\end{enumerate}
+
+\section{gDNA Isolation}\label{GI}
+\subsection{Overview}
+This section describes how to isolate gDNA to be used for 16S rDNA amplification.
+These steps are for the QIAGEN kit.
+If you happen use a different kit,
+please follow their instructions, and then proceed to \hyperref[1rA]{16S rDNA Amplification}.
+
+\subsection{Materials}
+
+\subsection{Method}
+
+\section{16S rDNA Amplification}\label{1rA}
+
 
 
 
