Change to onecolumn format and separate table of contents.

--- a/quantify_16S_ratios.tex
+++ b/quantify_16S_ratios.tex
@@ -1,4 +1,4 @@
-\documentclass[twocolumn]{article}
+\documentclass[onecolumn]{article}
 \usepackage{cite}
 \usepackage{authblk}
 \usepackage[colorlinks=true]{hyperref}
@@ -11,6 +11,7 @@
 \maketitle{}
 
 \tableofcontents{}
+\newpage
 
 \section{Culture Collection}\label{CC}
 \subsection{Overview}
@@ -107,8 +108,10 @@ Follow the subsequent instructions in parallel for all PCR amplicons synthesized
 \section{Sanger Sequencing}\label{SS}
 \subsection{Overview}
 This section describes how to prepare the purified 16S rDNA samples obtained from \hyperref[1rP]{16S rDNA Purification} for Sanger sequencing by \href{https://www.genewiz.com/}{Genewiz}.
-If you are suing a different sequencing platform or provider,
-please follow the relevant instructions as they most certainly will differ from what is listed here.
+If you are using a different sequencing platform or provider,
+please follow the relevant instructions,
+as they most certainly will differ from what is listed here,
+and continue to \hyperref[SAwC]{Species Abundances with CASEU}
 
 \subsection{Materials}
 \begin{itemize}
@@ -125,7 +128,7 @@ Follow the subsequent instructions in parallel for all PCR amplicons purified in
   \item Submit a Genewiz Sanger sequencing order online and print the order form. Place both the PCR tubes and order form in a clear, sealable plastic bag and deposit in the Genewiz drop-box.
 \end{enumerate}
 
-\section{Quantify Species Abundances with CASEU}\label{QSAwC}
+\section{Species Abundances with CASEU}\label{SAwC}
 \subsection{Overview}
 
 \subsection{Materials}
