Clarify master mix composition.

--- a/quantify_16S_ratios.tex
+++ b/quantify_16S_ratios.tex
@@ -155,6 +155,7 @@ Below is a recipe for a single,
 40-$\mu$L 16S rDNA PCR using \href{https://www.neb.com/protocols/0001/01/01/pcr-protocol-m0530}{Phusion Polymerase}.
 To generate a master mix for $N$ samples,
 simply multiply the volumes by $N*1.1$ to account for pipetting errors.
+\textbf{Note:} The master mix is everything but the \texttt{template gDNA}.
 \begin{table}[h]
   \begin{tabular}{|r|c|}
     \hline
